--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
     
     <div class="location">
         <h2>1. Озеро Возвращенного меча (Hoàn Kiếm Lake)</h2>
-        <img src="https://images.pexels.com/photos/2874769/pexels-photo-2874769.jpeg" alt="Озеро Возвращенного меча">
+        <img src="https://source.unsplash.com/800x600/?hanoi-hoan-kiem-lake" alt="Озеро Возвращенного меча">
         <p>Начните свою прогулку у живописного озера Хоан Кием, известного своим изумрудно-зеленым цветом воды. Легенда гласит, что здесь обитала гигантская черепаха, забравшая волшебный меч у императора Ле Лоя.</p>
         <p>Озеро Хоан Кием имеет уникальный изумрудно-зеленый цвет воды, вызванный водорослями Chlorophyta, которые встречаются только здесь. Согласно легенде, в озере обитала гигантская черепаха, которая забрала волшебный меч у императора Ле Лоя после победы над захватчиками. Последняя особь этого вида черепах умерла в 2016 году, но ее чучело до сих пор хранится в храме на острове посреди озера. Лучшее время для посещения - на рассвете или перед закатом, когда солнечный свет создает волшебную атмосферу.</p>
-        <p><a href="https://goo.gl/maps/DscWRvY5hL2mdJ7K8" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Hoàn+Kiếm+Lake,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
         <h2>2. Храм Нгок Сон (Ngoc Son Temple)</h2>
-        <img src="https://images.pexels.com/photos/5608695/pexels-photo-5608695.jpeg" alt="Храм Нгок Сон">
+        <img src="https://source.unsplash.com/800x600/?ngoc-son-temple-hanoi" alt="Храм Нгок Сон">
         <p>Посетите храм Нгок Сон, соединенный с берегом красным мостом Восходящего Солнца. Храм посвящен генералу Чан Хынг Дао и божеству литературы, создавая уникальное сочетание военной доблести и интеллектуальных достижений.</p>
         <p>Храм Нгок Сон соединен с берегом знаменитым красным мостом Восходящего Солнца (The Huc Bridge). Храм посвящен генералу Чан Хынг Дао, победившему монгольских захватчиков, а также божеству литературы. Это создает уникальное сочетание почитания военной доблести и интеллектуальных достижений. В храме можно увидеть чучело гигантской черепахи весом 250 кг, пойманной в озере в 1968 году.</p>
-        <p><a href="https://goo.gl/maps/VGgSE1xFqC9RCLWL6" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Ngoc+Son+Temple,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
         <h2>3. Старый квартал (Old Quarter)</h2>
-        <img src="https://cdn.pixabay.com/photo/2017/09/16/19/21/vietnam-2756420_1280.jpg" alt="Старый квартал Ханоя">
+        <img src="https://source.unsplash.com/800x600/?hanoi-old-quarter" alt="Старый квартал Ханоя">
         <p>Погрузитесь в атмосферу Старого квартала с его 36 улицами, каждая из которых традиционно специализировалась на определенном ремесле. Насладитесь узкими улочками с французской колониальной архитектурой.</p>
         <p>Старый квартал Ханоя - это лабиринт из 36 улиц, каждая из которых традиционно специализировалась на определенном ремесле. Например, на улице Hang Bac до сих пор продают серебряные украшения, а на Hang Ma - ритуальные предметы и игрушки для праздника середины осени. Узкие улочки с французской колониальной архитектурой создают уникальную атмосферу, где прошлое встречается с настоящим.</p>
-        <p><a href="https://goo.gl/maps/Lf7oJPMCGRiuPeZt6" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Old+Quarter,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
         <h2>4. Храм Литературы (Temple of Literature)</h2>
-        <img src="https://cdn.pixabay.com/photo/2020/02/16/20/29/vietnam-4854857_1280.jpg" alt="Храм Литературы">
+        <img src="https://source.unsplash.com/800x600/?temple-of-literature-hanoi" alt="Храм Литературы">
         <p>Посетите первый университет Вьетнама, основанный в 1070 году. Осмотрите каменные стелы с именами выпускников и символические изображения на воротах храма.</p>
         <p>Храм Литературы - это первый университет Вьетнама, основанный в 1070 году. Здесь до сих пор сохранились каменные стелы с именами выпускников, установленные на спинах каменных черепах - символов мудрости и долголетия. На воротах храма изображена рыба, символизирующая студентов, стремящихся стать "драконами" - успешными учеными.</p>
-        <p><a href="https://goo.gl/maps/Lfbq4KsxDXqbKGLz5" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Temple+of+Literature,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
         <h2>5. Улица поездов (Train Street)</h2>
-        <img src="https://cdn.pixabay.com/photo/2020/03/03/20/31/train-4899513_1280.jpg" alt="Улица поездов в Ханое">
+        <img src="https://source.unsplash.com/800x600/?train-street-hanoi" alt="Улица поездов в Ханое">
         <p>Пройдитесь по знаменитой улице поездов, где несколько раз в день проходят составы в непосредственной близости от жилых домов. Улица украшена яркими фонариками и вывесками.</p>
         <p>Улица поездов - это узкий проход между домами, по которому несколько раз в день проходят поезда. Жители домов вынуждены убирать свои вещи с путей перед приближением состава. Улица украшена яркими фонариками и вывесками, а в кафе вдоль путей можно выпить кофе, наблюдая за проходящими поездами.</p>
-        <p><a href="https://goo.gl/maps/UzTFePNgWDFBL5x29" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Train+Street,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
@@ -82,15 +82,15 @@
         <p>Quan An Ngon расположен в старинном французском особняке и предлагает блюда со всего Вьетнама в атмосфере уличного рынка. Здесь можно попробовать специалитеты разных регионов, наблюдая за их приготовлением. Особенно рекомендуют креветочные оладьи "Западного озера" и говяжий суп в стиле Хюэ. Вечером ресторан превращается в оживленный бар.</p>
         <p>Адрес: 18 Phan Bội Châu Street, Hoàn Kiếm district, Hà Nội</p>
         <p>Телефон: +84902126963</p>
-        <p><a href="https://goo.gl/maps/r9iN3RkxGgWETHQ56" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/Quan+An+Ngon,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 
     <div class="location">
         <h2>7. Собор Святого Иосифа</h2>
-        <img src="https://images.pexels.com/photos/28971042/pexels-photo-28971042.jpeg" alt="Собор Святого Иосифа в Ханое">
+        <img src="https://source.unsplash.com/800x600/?st-joseph-cathedral-hanoi" alt="Собор Святого Иосифа в Ханое">
         <p>Завершите свою прогулку у величественного неоготического собора Святого Иосифа. Полюбуйтесь его колокольнями, украшенными большими бронзовыми колоколами, и витражами, привезенными из Франции.</p>
         <p>Собор Святого Иосифа построен в неоготическом стиле и напоминает Нотр-Дам де Пари. Его колокольни украшены большими бронзовыми колоколами, а витражи были привезены из Франции. По воскресеньям во время вечерней мессы толпы верующих заполняют не только собор, но и прилегающую площадь, слушая трансляцию службы.</p>
-        <p><a href="https://goo.gl/maps/HMVhWgqyLLABXwMu7" target="_blank">Посмотреть на карте</a></p>
+        <p><a href="https://www.google.com/maps/place/St.+Joseph%27s+Cathedral,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
     </div>
 </body>
 </html>
