--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <div class="location">
         <h2>1. Озеро Возвращенного меча (Hoàn Kiếm Lake)</h2>
-        <img src="https://source.unsplash.com/800x600/?hanoi-hoan-kiem-lake" alt="Озеро Возвращенного меча">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Hoan_Kiem_Lake_Hanoi.jpg/1200px-Hoan_Kiem_Lake_Hanoi.jpg" alt="Озеро Возвращенного меча">
         <p>Начните свою прогулку у живописного озера Хоан Кием, известного своим изумрудно-зеленым цветом воды. Легенда гласит, что здесь обитала гигантская черепаха, забравшая волшебный меч у императора Ле Лоя.</p>
         <p>Озеро Хоан Кием имеет уникальный изумрудно-зеленый цвет воды, вызванный водорослями Chlorophyta, которые встречаются только здесь. Согласно легенде, в озере обитала гигантская черепаха, которая забрала волшебный меч у императора Ле Лоя после победы над захватчиками. Последняя особь этого вида черепах умерла в 2016 году, но ее чучело до сих пор хранится в храме на острове посреди озера. Лучшее время для посещения - на рассвете или перед закатом, когда солнечный свет создает волшебную атмосферу.</p>
         <p><a href="https://www.google.com/maps/place/Hoàn+Kiếm+Lake,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
@@ -46,7 +46,7 @@
 
     <div class="location">
         <h2>2. Храм Нгок Сон (Ngoc Son Temple)</h2>
-        <img src="https://source.unsplash.com/800x600/?ngoc-son-temple-hanoi" alt="Храм Нгок Сон">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Ngoc_Son_Temple_on_Hoan_Kiem_Lake_Hanoi.jpg/1200px-Ngoc_Son_Temple_on_Hoan_Kiem_Lake_Hanoi.jpg" alt="Храм Нгок Сон">
         <p>Посетите храм Нгок Сон, соединенный с берегом красным мостом Восходящего Солнца. Храм посвящен генералу Чан Хынг Дао и божеству литературы, создавая уникальное сочетание военной доблести и интеллектуальных достижений.</p>
         <p>Храм Нгок Сон соединен с берегом знаменитым красным мостом Восходящего Солнца (The Huc Bridge). Храм посвящен генералу Чан Хынг Дао, победившему монгольских захватчиков, а также божеству литературы. Это создает уникальное сочетание почитания военной доблести и интеллектуальных достижений. В храме можно увидеть чучело гигантской черепахи весом 250 кг, пойманной в озере в 1968 году.</p>
         <p><a href="https://www.google.com/maps/place/Ngoc+Son+Temple,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
@@ -54,7 +54,7 @@
 
     <div class="location">
         <h2>3. Старый квартал (Old Quarter)</h2>
-        <img src="https://source.unsplash.com/800x600/?hanoi-old-quarter" alt="Старый квартал Ханоя">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Hanoi_Old_Quarter_street.jpg/1200px-Hanoi_Old_Quarter_street.jpg" alt="Старый квартал Ханоя">
         <p>Погрузитесь в атмосферу Старого квартала с его 36 улицами, каждая из которых традиционно специализировалась на определенном ремесле. Насладитесь узкими улочками с французской колониальной архитектурой.</p>
         <p>Старый квартал Ханоя - это лабиринт из 36 улиц, каждая из которых традиционно специализировалась на определенном ремесле. Например, на улице Hang Bac до сих пор продают серебряные украшения, а на Hang Ma - ритуальные предметы и игрушки для праздника середины осени. Узкие улочки с французской колониальной архитектурой создают уникальную атмосферу, где прошлое встречается с настоящим.</p>
         <p><a href="https://www.google.com/maps/place/Old+Quarter,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
@@ -62,7 +62,7 @@
 
     <div class="location">
         <h2>4. Храм Литературы (Temple of Literature)</h2>
-        <img src="https://source.unsplash.com/800x600/?temple-of-literature-hanoi" alt="Храм Литературы">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Van_Mieu_Hanoi.jpg/1200px-Van_Mieu_Hanoi.jpg" alt="Храм Литературы">
         <p>Посетите первый университет Вьетнама, основанный в 1070 году. Осмотрите каменные стелы с именами выпускников и символические изображения на воротах храма.</p>
         <p>Храм Литературы - это первый университет Вьетнама, основанный в 1070 году. Здесь до сих пор сохранились каменные стелы с именами выпускников, установленные на спинах каменных черепах - символов мудрости и долголетия. На воротах храма изображена рыба, символизирующая студентов, стремящихся стать "драконами" - успешными учеными.</p>
         <p><a href="https://www.google.com/maps/place/Temple+of+Literature,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
@@ -70,7 +70,7 @@
 
     <div class="location">
         <h2>5. Улица поездов (Train Street)</h2>
-        <img src="https://source.unsplash.com/800x600/?train-street-hanoi" alt="Улица поездов в Ханое">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Hanoi_Train_Street_Vietnam.jpg/1200px-Hanoi_Train_Street_Vietnam.jpg" alt="Улица поездов в Ханое">
         <p>Пройдитесь по знаменитой улице поездов, где несколько раз в день проходят составы в непосредственной близости от жилых домов. Улица украшена яркими фонариками и вывесками.</p>
         <p>Улица поездов - это узкий проход между домами, по которому несколько раз в день проходят поезда. Жители домов вынуждены убирать свои вещи с путей перед приближением состава. Улица украшена яркими фонариками и вывесками, а в кафе вдоль путей можно выпить кофе, наблюдая за проходящими поездами.</p>
         <p><a href="https://www.google.com/maps/place/Train+Street,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
@@ -87,7 +87,7 @@
 
     <div class="location">
         <h2>7. Собор Святого Иосифа</h2>
-        <img src="https://source.unsplash.com/800x600/?st-joseph-cathedral-hanoi" alt="Собор Святого Иосифа в Ханое">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/St_Joseph_Cathedral_Hanoi_Vietnam.jpg/1200px-St_Joseph_Cathedral_Hanoi_Vietnam.jpg" alt="Собор Святого Иосифа в Ханое">
         <p>Завершите свою прогулку у величественного неоготического собора Святого Иосифа. Полюбуйтесь его колокольнями, украшенными большими бронзовыми колоколами, и витражами, привезенными из Франции.</p>
         <p>Собор Святого Иосифа построен в неоготическом стиле и напоминает Нотр-Дам де Пари. Его колокольни украшены большими бронзовыми колоколами, а витражи были привезены из Франции. По воскресеньям во время вечерней мессы толпы верующих заполняют не только собор, но и прилегающую площадь, слушая трансляцию службы.</p>
         <p><a href="https://www.google.com/maps/place/St.+Joseph%27s+Cathedral,+Hanoi,+Vietnam" target="_blank">Посмотреть на карте</a></p>
